# LexFlow

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
assets/: README.md
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  api.js  index.css  main.jsx  tauri-api.js
client/src/components/: CreatePracticeModal.jsx  LicenseScreen.jsx  LoginScreen.jsx  PracticeDetail.jsx  Sidebar.jsx  WindowControls.jsx
client/src/pages/: AgendaPage.jsx  Dashboard.jsx  DeadlinesPage.jsx  PracticesList.jsx  SettingsPage.jsx
client/src/utils/: pdfGenerator.js
electron/: biometrics.js  main.js  preload.js  storage.js
electron/services/: keychain.js
scripts/: README.md  license-keygen.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
